# todoctl

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  cliff.toml  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: changelog-on-tag.yml  pylint.yml  python-app.yml  python-publish.yml
src/todoctl/: __init__.py  backup.py  bootstrap.py  cli.py  config.py  crypto.py  doctor.py  editor.py  fs_secure.py  models.py  parser.py  renderer.py  resolver.py  shell_session_cache.py  store.py
src/todoctl/vim/ftdetect/: todoctl.vim
src/todoctl/vim/ftplugin/: todoctl.vim
src/todoctl/vim/syntax/: todoctl.vim
tests/: test_parser.py  test_resolver.py
