[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todoctl"
version = "1.0.0"
description = "Encrypted monthly CLI todo manager with shell-session passphrase cache"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "cryptography>=42.0.0",
  "keyring>=25.0.0",
]

[project.scripts]
todo = "todoctl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
